fix(core): facade, lattice, and engine contracts from the inspection
Facade/lattice:
- toListIndexed mirrors toList's fast-path normalization exactly — an
  Iso-rooted telescope materialized a null root as [Indexed[0, null]] while
  toList said []; the two terminals can no longer disagree (pinned).
- filter()/as()/fieldByName() propagate firstHopName instead of resetting
  it to null mid-path: the next hop no longer falsely claims first-hop
  status, empty-read diagnostics name the real entry field, and DeepMap's
  telescope-row soft claims route by the right name (pinned via the
  filtered-path error message). fieldByName also establishes the string as
  the first hop on a bare root.
- Fold.findFirst documents its null-collapse (Optional cannot carry a null
  match; any() answers true for the same inputs — callers needing the
  distinction use visitWhile).
- Prism no longer re-declares Affine's byte-identical getAll/visitWhile
  defaults — half the lockstep surface of the dual read primitives, gone.

Engines:
- Merge validates at build time that every from(...) row targets a real
  component/property, restoring the diagnostic the positional bind lost:
  an unmatched row previously bound no slot, so its source accessor was
  never read and forward(Sources.of()) silently produced a null-filled
  target instead of the missing-source IllegalStateException (pinned).
- FromMap applies the same fail-loud validation to extract rows (silently
  ignored before), and its "JLS default" javadoc now says what the code
  does: NullDefaults type defaults ("" for String, empty containers).
- Mapper.patch distinguishes "no patchable rows" (empty table, returns
  base) from "patch unsupported" (null table, the merge sentinel): a merge
  mapper's patch now throws the same UnsupportedOperationException shape
  its backward does, instead of silently returning the bag (pinned).